<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutAccueil"
    style="@style/wallpaper"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="8dp" >

    <TextView
        android:id="@+id/accueil_textAccueil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accueil_textAccueil"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        android:textStyle="bold" />
    
    <TableLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
	    android:layout_centerHorizontal="true"
	    android:layout_centerInParent="true"
	    android:gravity="center"
	    android:stretchColumns="1" >
	
	    <Button
	        android:id="@+id/accueil_button_discover"
	        style="@style/boutonNormal"
	        android:text="@string/accueil_button_discover" />
	
	    <Button
	        android:id="@+id/accueil_button_search"
	        style="@style/boutonNormal"
	        android:layout_marginTop="3dp"
	        android:text="@string/accueil_button_search" />
	
	    <Button
	        android:id="@+id/accueil_button_browse"
	        style="@style/boutonNormal"
	        android:layout_marginTop="3dp"
	        android:text="@string/accueil_button_browse" />
	     
	    <Button
	        android:id="@+id/accueil_button_cinema"
	        style="@style/boutonNormal"
    	    android:layout_marginTop="3dp"
	        android:text="@string/accueil_button_cinema" />
	
	    <Button
	        android:id="@+id/accueil_button_channel"
	        style="@style/boutonNormal"
	        android:layout_marginTop="3dp"
	        android:text="@string/accueil_button_channel" />
	    <Button
	        android:id="@+id/accueil_button_parametre_user"
	        style="@style/boutonNormal"
	        android:layout_marginTop="3dp"
	        android:text="@string/accueil_button_parameter_user" />
	
	    <Button
	        android:id="@+id/accueil_button_stats"
	        style="@style/boutonNormal"
	        android:layout_marginTop="3dp"
	        android:text="@string/accueil_button_stats" />
	
	    <Button
	        android:id="@+id/accueil_button_disconnect"
	        style="@style/boutonNormal"
	        android:layout_marginTop="3dp"
	        android:text="@string/accueil_button_disconnect" />
	</TableLayout>
	
</RelativeLayout>