<?xml version="1.0"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear_layout_selection"
    style="@style/wallpaper"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/channel_Text"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/channel_button_channel"
        style="@style/boutonNormal"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:text="@string/channel_all_channel"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/channel_button_playingtoday"
        style="@style/boutonNormal"
        android:layout_below="@+id/channel_button_channel"
        android:layout_centerHorizontal="true"
        android:text="@string/channel_playing_today"
        android:textColor="@color/white" />

	</RelativeLayout>