<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
		<RelativeLayout 
  		  android:layout_width="fill_parent"
   		  android:layout_height="wrap_content"
    	  android:orientation="vertical" 
    	  android:padding="8dp"
   		  style="@style/wallpaper">
    
    <TextView 
        android:id="@+id/movie_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:textColor="@color/white"
        android:textSize="35sp"
        />
    
    <ImageView 
        android:id="@+id/movie_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/movie_description_img"
        android:layout_alignBottom="@id/movie_title"
        android:layout_alignParentRight="true"/>
    
    <CheckBox
        android:id="@+id/movie_already_watched"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/movie_title"
        android:text = "@string/movie_already_watched"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/movie_watched_once_more"
        style="@style/boutonSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/movie_title"
        android:layout_marginLeft="7dp"
        android:layout_toRightOf="@id/movie_already_watched"
        android:minHeight="35dp"
        android:minWidth="40dp"
        android:text="@string/movie_watched_once_more"
        android:textColor="@color/white"
        android:textSize="12sp" />
    
    <TextView 
        android:id="@+id/movie_viewed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/movie_already_watched"
        android:layout_alignLeft="@id/movie_already_watched"
        android:text="@string/movie_viewed"/>

    <TextView
        android:id="@+id/movie_textyear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/movie_already_watched"
        android:layout_marginTop="20dp"
        android:layout_alignParentLeft="true"
        android:text="@string/movie_text_title"
        android:textColor="@color/white"
        />
    
    <TextView
        android:id="@+id/movie_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/movie_already_watched"
        android:layout_alignBaseline="@id/movie_textyear"
        android:layout_toRightOf="@id/movie_textyear"
        android:textColor="@color/white"
        android:textSize="15sp"
        />
       <TextView
        android:id="@+id/movie_textduration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/movie_already_watched"
                android:layout_marginTop="20dp"
        
        android:layout_toLeftOf = "@+id/movie_duration"
        android:text="@string/movie_text_duration"
        android:textColor="@color/white"
        />
    <TextView 
        android:id="@+id/movie_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
        
        android:layout_below="@id/movie_already_watched"
        android:layout_alignParentRight="true"
        android:textColor="@color/white"
        android:textSize="15sp"
        />
    <TextView 
        android:id="@+id/movie_genre1"
       android:layout_width="wrap_content"
        android:layout_marginTop = "15dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/movie_year"
        android:textColor="@color/white"
        android:textSize="15sp"
        />
     <TextView 
        android:id="@+id/movie_genre2"
       android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/movie_year"
         android:layout_marginTop = "15dp"
        android:layout_toRightOf = "@id/movie_genre1"
        android:textColor="@color/white"
        android:textSize="15sp"
        />
     
      <TextView 
        android:id="@+id/movie_genre3"
       android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/movie_year"
         android:layout_marginTop = "15dp"
        android:layout_toRightOf="@id/movie_genre2"
        android:textColor="@color/white"
        android:textSize="15sp"
        />
    
     <TextView
        android:id="@+id/movie_textdirector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/movie_genre1"
        android:layout_marginTop = "15dp"
        android:layout_alignParentLeft="true"
        android:text="@string/movie_text_director"
        android:textColor="@color/white"
        />
    <TextView
        android:id="@+id/movie_director"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop = "15dp"
        android:layout_below="@id/movie_genre1"
        android:layout_toRightOf="@id/movie_textdirector"
        android:textColor="@color/white"
        android:textSize="15sp"
        />
    
     <TextView
        android:id="@+id/movie_textactors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/movie_director"
        android:layout_marginTop = "15dp"
        android:layout_alignParentLeft = "true"
        android:text="@string/movie_text_actors"
        android:textColor="@color/white"
        />
    <Spinner
        android:id="@+id/movie_actors_spinner"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_toRightOf="@id/movie_textactors"
    	android:layout_below="@id/movie_director"
    	android:layout_marginLeft = "8dp"
    	android:layout_marginTop = "15dp"
    	android:textColor="@color/white"
    	android:drawSelectorOnTop= "true"
        android:background = "@color/white"
        />
    <TextView
        android:id="@+id/movie_synopsis"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:textColor="@color/white"
    	android:layout_alignParentLeft="true"
    	android:layout_below="@id/movie_textactors"
    	android:layout_marginTop = "20dp"
        />
    
    <RatingBar
        android:id="@+id/movie_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/movie_synopsis"
        android:layout_marginTop="10dp"/>
    
    <Button
        style="@style/boutonSmall"
        android:id="@+id/movie_button_save"
		android:layout_toRightOf="@id/movie_rating"
		android:layout_alignBottom="@id/movie_rating"
		android:layout_marginBottom="9dp"
		android:layout_marginLeft="5dp"
		android:textSize="16sp"
        android:minHeight="40dp"
        android:minWidth="50dp"
        android:text="@string/movie_save"
        android:textColor="#FFFFFF" />
    
    <Button 
        android:id="@+id/movie_trailer"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
        android:textColor = "@color/white"
        android:layout_marginTop = "20dp"
        android:text="@string/movie_seetrailer"
        android:layout_below="@id/movie_rating"
        android:layout_centerHorizontal="true"
        style="@style/boutonNormal"
        />
    <Button 
        android:id="@+id/movie_findcinema"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
        android:layout_below="@id/movie_trailer"
        android:layout_alignParentLeft="true"
        android:layout_marginTop = "20dp"
        android:text = "@string/movie_findcinema"
        android:textColor = "@color/white"
        style="@style/boutonNormal"
        />
    <Button 
        android:id="@+id/movie_findchannel"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
        android:layout_below="@id/movie_trailer"
        android:layout_toRightOf="@id/movie_findcinema"
        android:layout_marginTop = "20dp"
        android:text = "@string/movie_findchannel"
        android:textColor = "@color/white"
        style="@style/boutonNormal"
        />

    

</RelativeLayout>
</ScrollView>